# next-rust-release-date

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml  security-audit.yml
src/: main.rs
