[package]
name = "next-rust-release-date"
version = "0.2.2"
description = "When's the next Rust release?"
repository = "https://github.com/tshepang/next-rust-release-date"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.71"

[dependencies]
jiff = "0.2"
